# pytest-mock-presentation

./: .gitattributes  .gitignore  .travis.yml  MANIFEST.in  azure-pipelines.yaml  requirements-pres.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: codeql-analysis.yml  python-app.yml
neon/: __init__.py  _version.py  functions.py  main.py
neon/utils/: functions.py  sparkutils.py
notebooks/: presentation-pytest.ipynb  presentation-tox.ipynb  presentation.ipynb  runner.ipynb
tests/: test_functions.py  test_main.py
