[metadata]
name = CatFacts
author= Gianmaria Genetlici
author_email= gianmaria.genetlici@gmail.com
description = A simple showcase application for different testing practices
long_description = file: README.md
keywords = pytest, pyspark, mocking, stubbing, api
license = GNU General Public License v3.0
license_file = LICENSE
url = https://github.com/jean-n92/pytest-mock-presentation
classifiers =
    Framework :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
packages = find:
install_requires =
    requests==2.26.0
tests_require =
    tox==3.24.5

[options.extras_require]
presentation = ipytest==0.11.0; jupyter==1.0.0; rise==5.7.1
spark = pyspark==3.1.2

[options.entry_points]
console_scripts =
    cat-facts = neon.main:main

[options.packages.find]
exclude =
    tests

[versioneer]
VCS = git
style = pep440
versionfile_source = neon/_version.py
versionfile_build = None
tag_prefix = catfacts-
